# ragtio

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  ollama-init.sh  pyproject.toml
app/: api.py  config.py  evaluation.py  indexing.py  ingest.py  metrics.py  query_enhancement.py  rag_qa.py  retrieval.py  utils.py
static/: index.html
tests/: test_api.py  test_config.py  test_evaluation.py  test_indexing.py  test_ingest.py  test_metrics.py  test_query_enhancement.py  test_rag_qa.py  test_retrieval.py
tests/fixtures/: test.csv  test.json  test.jsonl  test.txt
