[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragtio"
version = "0.1.0"
description = "Application for RAG evaluation"
requires-python = ">=3.11"
dependencies = [
    "haystack-ai>=2.6",
    "qdrant-haystack",
    "fastembed-haystack",
    "qdrant-client",
    "fastembed",
    "ollama",
    "openai>=1.0",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.7",
    "pydantic-settings",
    "pymupdf",
    "python-docx",
    "pandas",
    "PyYAML",
    "httpx",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "anyio[trio]",
    "pytest-httpx",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
